--- a/src/content/work/digital-art/2024-02-16-01.md
+++ b/src/content/work/digital-art/2024-02-16-01.md
@@ -4,6 +4,7 @@ featured: true
 img: /portfolio/assets/digital-art/ani-kat-duck-cricket.png
 img_alt: Animation of a cat done with Krita
 publishDate: 2020-02-16 00:01:00
+sectionTitle: Digital Art
 title: Ani Kat Duck Cricket
 video: /portfolio/assets/digital-art/ani-kat-duck-cricket.mp4
 tags:
